--- a/ignore.conf
+++ b/ignore.conf
@@ -12,6 +12,7 @@ UserSettings
 usersettings
 MemoryCaptures
 memorycaptures
+Library/PackageCache/com.unity.burst@1.8.17/.Runtime/libburst-llvm-16.dylib
 Logs
 logs
 **/Assets/AssetStoreTools
